--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Nicole Anderson"
+date: "Year 2022"
 output: html_document
 ---
 
@@ -14,7 +14,15 @@ Our project will be done using several commits to the master branch.
 you, if you change any of this the git program will notice it and compromise your git merging strategy !-->
 
 ## First Verse 
-<!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+He thought he saw an Elephant
+
+That practised on a fife:
+
+He looked again, and found it was
+
+A letter from his wife.
+
+'At length I realize,' he said, 
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
