--- a/poem.rmd
+++ b/poem.rmd
@@ -25,7 +25,15 @@ A letter from his wife.
 'At length I realize,' he said, 
 
 ## Second Verse
-<!--Put the first five lines of a poem by Robert Frost here!-->
+There sandy seems the golden sky
+
+And golden seems the sandy plain.
+
+No habitation meets the eye
+
+Unless in the horizon rim,
+
+Some halfway up the limestone wall,
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
