--- a/poem.rmd
+++ b/poem.rmd
@@ -36,7 +36,9 @@ Unless in the horizon rim,
 Some halfway up the limestone wall,
 
 ## Third Verse
-<!--Put the first two verses of The Walrus and the Carpenter here!-->
+"The sun was shining on the sea,
+      
+Shining with all his might:
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
