--- a/poem.rmd
+++ b/poem.rmd
@@ -41,4 +41,24 @@ Some halfway up the limestone wall,
 Shining with all his might:
 
 ## Last Verse
-<!--Put a short poem of your choice 8-20 lines,here!-->
+Time doesn’t heal wounds
+
+to make you forget.
+
+It doesn’t heal wounds to
+
+erase the memories.
+
+Time leaves you with a scar
+
+to remind you of how you fought through it.
+
+Time leaves you with a scar
+
+to remind you of how you bled
+
+and how you survived.
+
+You survived.
+
+
